# AppAutoAction

./: .env.example  .gitattributes  .gitignore  .npmignore  AGENTS.md  README.md  SECURITY.md  package.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: npm-publish.yml
bridges/: blender_building_bridge.py  codex_exec_blender.sh
cad/: README.md  environment-cad-python.yml
cad/references/: README.md  cad-toolchain.md  cmount-threaded-reflector-assembly-scale.md  openhi-print-fit-and-thread-reference.md
cad/research/: openhi_nature_step_notes.md
configs/: blender-local-command.example.json
docs/: EDITABLE_FIGURE_PIPELINE.md  HYBRID_EM_SENSOR_ROADMAP.md  NPM.md  PAPER_FIGURE_STUDIO.md  RESEARCH.md  SCENE_SPEC.md  STUDIO_CLI.md  WEBAPP.md
examples/: paper-optics-setup.scene.json
examples/renders/: paper-optics-setup.blend
i18n/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.ru.md  README.vi.md  README.zh-Hans.md  README.zh-Hant.md
pcb/: .gitignore  jlcpcb-jialichuang-automation.md  kicad-mcp-research.md
pcb/hybec-hbl-273-g4/: README.md  generate_hybec_halogen_g4_board.py  hybec-hbl-273-g4.kicad_pcb  hybec-hbl-273-g4.kicad_sch
scripts/: install_blender_portable.sh  npm-publish-from-env.js  npm-release.js
src/agenticapp/: __init__.py  adapters.py  artifacts.py  backends.py  blender_render.py  cli.py  config.py  openscad_export.py  paper_figures.py  scene_spec.py  (+1 more)
tests/: test_blender_bridge.py  test_cli.py  test_npm_package.py  test_paper_figures.py  test_scene_spec.py  test_webapp.py
(+79 files in other folders)
