[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aginti-labcanvas"
version = "0.1.0"
description = "AgInTi LabCanvas: an agentic studio for editable scientific figures, CAD devices, and experiment design."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
labcanvas = "agenticapp.cli:main"
app-auto-action = "agenticapp.cli:main"
agenticapp = "agenticapp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agenticapp.web" = ["static/*"]
